# Agents

./: .gitignore
agents_back/: .env.example  alembic.example.ini  db.py  main.py  pyproject.toml  requirements.txt  setup.py
agents_back/agents_back.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
agents_back/alembic/: env.py
agents_back/alembic/versions/: 143f9f01dcc9_add_users_table.py
agents_back/controllers/: auth_controller.py  chat_controller.py  dashboard_controller.py  langchain_controller.py  mcp_controller.py
agents_back/core/: chat_system.py  security.py
agents_back/core/chat/: chat_system.py
agents_back/core/chat/agents/: agent_base.py  dashboard_builder_agent.py  dsl_agent.py  general_agent.py  router_agent.py
agents_back/middleware/: request_middleware.py
agents_back/models/: __init__.py  chat.py  chat_history.py  chat_members.py  chat_messages.py  dashboard.py  user.py
agents_back/services/: auth_service.py  chat_service.py  dashboard_service.py  mcp_service.py
agents_back/types/: auth.py  chat.py  dashboard.py  general.py  sse.py
agents_back/utils/: agents.py  http.py  mongodb.py  responses.py  tools.py  utils.py
agents_front/: package-lock.json  package.json
agents_front/src/: theme.ts
agents_front/src/app/: globals.css  layout.tsx  page.tsx
agents_front/src/app/agents/: page.tsx
agents_front/src/app/login/: page.tsx
agents_front/src/app/mcp/: page.tsx
agents_front/src/app/register/: page.tsx
agents_front/src/components/: Message.tsx
agents_front/src/components/dashboard/: DashboardComponent.tsx
agents_front/src/components/layouts/pageLayout/: PageLayout.tsx
agents_front/src/components/layouts/pageLayout/sideMenu/: SideMenu.tsx
agents_front/src/components/layouts/pageLayout/sideMenu/children/: TalksChildren.tsx
agents_front/src/components/layouts/pageLayout/sideMenu/components/: ChatView.tsx  DashboardsView.tsx  NavBar.tsx  NavBarButton.tsx  TalksChildren.tsx
agents_front/src/components/layouts/pageLayout/topPanel/: TopPanel.tsx
agents_front/src/components/mainPage/: ChatsSection.tsx  Message.tsx
agents_front/src/components/views/: AgentsView.tsx  ChatsView.tsx  MCPView.tsx
agents_front/src/components/views/dashboardView/: DashboardView.tsx
agents_front/src/components/views/dashboardView/components/: DashboardComponent.tsx
agents_front/src/components/views/dashboardView/dsl/: Chart.jsx  ChartComponent.tsx  Component.tsx
agents_front/src/contexes/: appContext.ts  authContext.ts  chatContext.ts  mcpContext.ts
agents_front/src/services/: AuthService.ts  ChatService.ts  DashboardService.ts  MCPService.ts
agents_front/src/types/: auth.ts  chat.ts  dashboard.ts  dsl.ts  http.ts
agents_front/src/types/chat/: Chat.ts  ChatConnection.ts  ChatDTO.ts
