[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agents-back"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt>=4.3.0",
    "fastapi>=0.116.0",
    "langchain-anthropic>=0.3.19",
    "langchain-core>=0.3.68",
    "langchain-google-genai>=2.1.10",
    "langchain-groq>=0.3.5",
    "langchain-huggingface>=0.3.0",
    "langchain-mongodb>=0.6.2",
    "langchain-openai>=0.3.28",
    "mcp[cli]>=1.11.0",
    "motor>=3.7.1",
    "passlib>=1.7.4",
    "pymongo[srv]>=4.13.2",
    "python-dotenv>=1.1.1",
    "python-jose>=3.5.0",
    "setuptools>=80.9.0",
    "xmltodict>=0.14.2",
]
